; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_5004.c_fixup_ring0_shell.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_5004.c_fixup_ring0_shell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"* GetVersion, unsupported version\0A\00", align 1
@EXIT_FAILURE = common dso_local global i32 0, align 4
@winxp_ring0_shell = common dso_local global i32* null, align 8
@win2k3_ring0_shell = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32, i32*)* @fixup_ring0_shell to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @fixup_ring0_shell(i32 %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %11 = call i32 (...) @GetVersion()
  store i32 %11, i32* %8, align 4
  %12 = load i32, i32* %8, align 4
  %13 = call i32 @LOWORD(i32 %12)
  %14 = call i64 @LOBYTE(i32 %13)
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @LOWORD(i32 %16)
  %18 = call i64 @HIBYTE(i32 %17)
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* %10, align 4
  %20 = load i32, i32* %9, align 4
  %21 = icmp ne i32 %20, 5
  br i1 %21, label %22, label %27

22:                                               ; preds = %3
  %23 = load i32, i32* @stderr, align 4
  %24 = call i32 @fprintf(i32 %23, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %25 = load i32, i32* @EXIT_FAILURE, align 4
  %26 = call i32 @exit(i32 %25) #3
  unreachable

27:                                               ; preds = %3
  %28 = load i32, i32* %10, align 4
  switch i32 %28, label %41 [
    i32 1, label %29
    i32 2, label %35
  ]

29:                                               ; preds = %27
  %30 = load i32*, i32** %7, align 8
  store i32 7, i32* %30, align 4
  %31 = load i32, i32* %6, align 4
  %32 = load i32*, i32** @winxp_ring0_shell, align 8
  %33 = getelementptr inbounds i32, i32* %32, i64 55
  store i32 %31, i32* %33, align 4
  %34 = load i32*, i32** @winxp_ring0_shell, align 8
  store i32* %34, i32** %4, align 8
  br label %46

35:                                               ; preds = %27
  %36 = load i32*, i32** %7, align 8
  store i32 7, i32* %36, align 4
  %37 = load i32, i32* %6, align 4
  %38 = load i32*, i32** @win2k3_ring0_shell, align 8
  %39 = getelementptr inbounds i32, i32* %38, i64 58
  store i32 %37, i32* %39, align 4
  %40 = load i32*, i32** @win2k3_ring0_shell, align 8
  store i32* %40, i32** %4, align 8
  br label %46

41:                                               ; preds = %27
  %42 = load i32, i32* @stderr, align 4
  %43 = call i32 @fprintf(i32 %42, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %44 = load i32, i32* @EXIT_FAILURE, align 4
  %45 = call i32 @exit(i32 %44) #3
  unreachable

46:                                               ; preds = %35, %29
  %47 = load i32*, i32** %4, align 8
  ret i32* %47
}

declare dso_local i32 @GetVersion(...) #1

declare dso_local i64 @LOBYTE(i32) #1

declare dso_local i32 @LOWORD(i32) #1

declare dso_local i64 @HIBYTE(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
